fixed alignwide and alignfull styling

--- a/sass/utilities/_alignments.scss
+++ b/sass/utilities/_alignments.scss
@@ -26,18 +26,23 @@
 	margin-bottom: 1.5em;
 }
 
-
-//wide width and full width alignment style
-$wide-max-width: 1200px;
-
-.alignwide {
-	max-width: $wide-max-width;
-	margin-left: auto;
-	margin-right: auto;
+.alignwide,
+.alignfull {
+   display: block;
+   width: 100vw;
+   max-width: 100vw;
+   margin: 2rem calc(49% - 50vw);
 }
 
-.alignfull {
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+.alignwide {
+   width: auto;
+}
+
+
+@media only screen and (min-width: 1300px) {
+   .alignwide {
+       max-width: 1300px;
+       margin-left: -150px;
+       margin-right: -150px;
+   }
 }
